@@ -26,7 +26,7 @@
 
 #define LIBSMDEV_VERSION				@VERSION@
 
-/* The libsmdev version string
+/* The version string
  */
 #define LIBSMDEV_VERSION_STRING				"@VERSION@"
 
@@ -43,7 +43,7 @@ enum LIBSMDEV_ACCESS_FLAGS
 	LIBSMDEV_ACCESS_FLAG_TRUNCATE			= 0x04
 };
 
-/* The libsmdev file access macros
+/* The file access macros
  */
 #define LIBSMDEV_OPEN_READ				( LIBSMDEV_ACCESS_FLAG_READ )
 #define LIBSMDEV_OPEN_WRITE				( LIBSMDEV_ACCESS_FLAG_WRITE )
