@@ -24,27 +24,20 @@
 
 #include <libsmdev/features.h>
 
-#if @HAVE_SYS_TYPES_H@ || defined( HAVE_SYS_TYPES_H )
-#include <sys/types.h>
-
-#else
-#error Missing system type definitions (sys/types.h)
-#endif
-
-/* Type definitions for the Microsoft Visual Studio C++ compiler
+/* Microsoft C/C++ compiler
  */
 #if defined( _MSC_VER )
 
-/* Define LIBSMDEV_DEFINITION_INTEGER_TYPES to avoid conflict if types are already defined
+/* Define _LIBSMDEV_TYPES_H_INTEGERS to avoid conflict
  */
-#if !defined( LIBSMDEV_DEFINITION_INTEGER_TYPES )
-#define LIBSMDEV_DEFINITION_INTEGER_TYPES
+#if !defined( _LIBSMDEV_TYPES_H_INTEGERS )
+#define _LIBSMDEV_TYPES_H_INTEGERS
 
 #ifdef __cplusplus
 extern "C" {
 #endif
 
-/* Microsoft Visual Studio C++ Compiler does not have <inttypes.h> or <stdint.h>
+/* The Microsoft Visual Studio C++ compiler does not have <inttypes.h> or <stdint.h>
  * therefore it does not support the (u)int#_t type definitions
  * it has __int# defintions instead
  */
@@ -67,15 +60,17 @@ typedef __int32			ssize_t;
 }
 #endif
 
-#endif
+#endif /* !defined( _LIBSMDEV_TYPES_H_INTEGERS ) */
 
+/* Borland C/C++ compiler
+ */
 #elif defined( __BORLANDC__ )
 #if __BORLANDC__ <= 0x0560
 
-/* Define LIBEWF_DEFINITION_INTEGER_TYPES to avoid conflict
+/* Define _LIBSMDEV_TYPES_H_INTEGERS to avoid conflict
  */
-#if !defined( LIBEWF_DEFINITION_INTEGER_TYPES )
-#define LIBEWF_DEFINITION_INTEGER_TYPES
+#if !defined( _LIBSMDEV_TYPES_H_INTEGERS )
+#define _LIBSMDEV_TYPES_H_INTEGERS
 
 #ifdef __cplusplus
 extern "C" {
@@ -106,16 +101,27 @@ typedef unsigned __int32	intptr_t;
 }
 #endif
 
-#endif /* LIBEWF_DEFINITION_INTEGER_TYPES */
+#endif /* !defined( _LIBSMDEV_TYPES_H_INTEGERS ) */
 
 #else
 #include <stdint.h>
 #endif /* __BORLANDC__ <= 0x0560 */
 
+/* Other compilers
+ */
+#else
+
+#if @HAVE_SYS_TYPES_H@ || defined( HAVE_SYS_TYPES_H )
+#include <sys/types.h>
+
+#else
+#error Missing system type definitions (sys/types.h)
+#endif
+
 /* Type definitions for compilers that have access to
  * <inttypes.h> or <stdint.h>
  */
-#elif @HAVE_INTTYPES_H@ || defined( HAVE_INTTYPES_H )
+#if @HAVE_INTTYPES_H@ || defined( HAVE_INTTYPES_H )
 #include <inttypes.h>
 
 #elif @HAVE_STDINT_H@ || defined( HAVE_STDINT_H )
@@ -124,6 +130,8 @@ typedef unsigned __int32	intptr_t;
 #else
 #error Missing integer type definitions (inttypes.h, stdint.h)
 #endif
+
+#endif /* Compiler specific integer type definitions */
 
 #if defined( LIBSMDEV_HAVE_WIDE_CHARACTER_TYPE )
 
@@ -166,8 +174,6 @@ typedef unsigned __int32	intptr_t;
 #undef LIBSMDEV_DEFINITION_ISOC99
 #endif
 
-#else
-#error Missing wide character type definition (wchar.h)
 #endif
 
 #endif
